DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
[1.2.0 released - 8.14.2007]===================================================
Jul-08-2007 patrick     Debug-enabled code linked against the release runtime
                        on Windows is now named the same as optimized code.
                        The debug DLLs are installed in the "debug"
                        subdirectory. On non-Windows platforms, debug-enabled
                        plug-ins no longer use the "_d" name variation and are
                        installed in the "debug" subdirectory.
                        NEW VERSION: 1.1.14
Jun-27-2007 patrick     Changed the preprocessor identification of debug versus
                        optimized to look for JCCL_DEBUG or JUGGLER_DEBUG
                        instead of _DEBUG (and JCCL_OPT or JUGGLER_OPT instead
                        of _OPT).
                        NEW VERSION: 1.1.13
Jan-30-2007 patrick     Eliminated the need to set JCCL_BASE_DIR on Windows to
                        run applications.
                        NEW VERSION: 1.1.12
Dec-13-2006 aronb       Added jccl::ConfigManager::shutdown().
                        NEW VERSION: 1.1.11
Nov-13-2006 patrick     Replaced vpr::ReturnStatus usage with bool in the
                        jccl::RemoteReconfig interface.
                        NEW VERSION: 1.1.10
Oct-01-2006 patrick     Updated for VPR 1.1.35.
                        NEW VERSION: 1.1.9
Aug-10-2006 patrick     Updated for Boost.Filesystem changes in Boost 1.34.
                        NEW VERSION: 1.1.8
Aug-03-2006 dshipton    Flagpoll now used to build JCCL.
                        NEW VERSION: 1.1.7
Jul-12-2006 patrick     Changed the DLL name to include the version as part of
                        the base library name on Windows. Implemented automatic
                        linking of the JCCL library.
                        NEW VERSION: 1.1.6